# cudatest

./: CMakeLists.txt  cuda.cu  cuda.cuh  debugging_woes.md  detection.cpp  detection.hpp  main.cpp
